--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.tsystems.tm.acc.tests</groupId>
         <artifactId>acc-domain-tests-bom</artifactId>
-        <version>0.0.8.1</version>
+        <version>0.0.13</version>
     </parent>
 
     <repositories>
@@ -29,20 +29,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>com.tsystems.tm.acc</groupId>
             <artifactId>wiremock-acc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.tsystems.tm.acc</groupId>
-            <artifactId>soapui</artifactId>
         </dependency>
     </dependencies>
 
@@ -51,6 +43,14 @@
             <plugin>
                 <groupId>com.tsystems.tm.acc.tests</groupId>
                 <artifactId>acc-data-maven-plugin</artifactId>
+                <configuration>
+                    <commonPackageName>com.tsystems.tm.acc.data.models</commonPackageName>
+                    <extraTemplateFolders>
+                        <extraTemplateFolder>
+                            ${common.template.folder}
+                        </extraTemplateFolder>
+                    </extraTemplateFolders>
+                </configuration>
                 <executions>
                     <execution>
                         <id>generateModels</id>
@@ -58,9 +58,9 @@
                             <goal>createModels</goal>
                         </goals>
                         <configuration>
-                            <sourceFolder>${basedir}/osr-data</sourceFolder>
-                            <outputFolder>${project.build.directory}/generated-sources</outputFolder>
                             <packageName>com.tsystems.tm.acc.data.osr.models</packageName>
+                            <sourceFolder>${basedir}/osr-data</sourceFolder>
+                            <outputSourceFolder>${project.build.directory}/generated-sources</outputSourceFolder>
                         </configuration>
                     </execution>
                     <execution>
@@ -69,8 +69,10 @@
                             <goal>createData</goal>
                         </goals>
                         <configuration>
+                            <packageName>com.tsystems.tm.acc.data.osr.models</packageName>
                             <sourceFolder>${basedir}/osr-data</sourceFolder>
                             <outputFolder>${project.build.directory}/osr-data</outputFolder>
+                            <outputSourceFolder>${project.build.directory}/generated-sources</outputSourceFolder>
                             <valuesFile>${basedir}/osr-data/values.yml</valuesFile>
                         </configuration>
                     </execution>
@@ -80,8 +82,10 @@
                             <goal>createArtifacts</goal>
                         </goals>
                         <configuration>
+                            <packageName>com.tsystems.tm.acc.data.osr.models</packageName>
                             <sourceFolder>${basedir}/osr-data</sourceFolder>
                             <outputFolder>${project.build.directory}/osr-data</outputFolder>
+                            <outputSourceFolder>${project.build.directory}/generated-test-sources</outputSourceFolder>
                             <valuesFile>${basedir}/osr-data/values.yml</valuesFile>
                         </configuration>
                     </execution>
