--- a/osr-data/dataset/Dataset_1.yml
+++ b/osr-data/dataset/Dataset_1.yml
@@ -2,4 +2,8 @@ name: Dataset_1
 data:
   - template: OltDevice
     name: FSZ_76H1
+  - template: LineIdBatch
+    name: lineIdBatch
+  - template: HomeIdBatch
+    name: homeIdBatch
 artifacts:
