DIGIHUB-28415 - Create Port Provisioning tests(5600, 5800)

--- a/osr-data/dataset/Dataset_1.yml
+++ b/osr-data/dataset/Dataset_1.yml
@@ -6,4 +6,8 @@ data:
     name: lineIdBatch
   - template: HomeIdBatch
     name: homeIdBatch
+  - template: PortProvisioning
+    name: portProvisioning5600
+  - template: PortProvisioning
+    name: portProvisioning5800
 artifacts:
