DIGIHUB-28415 - Create Port Provisioning tests(5600, 5800)

--- a/osr-data/data/provisioning/portPartlyOccupied.yml
+++ b/osr-data/data/provisioning/portPartlyOccupied.yml
@@ -1,12 +1,12 @@
-name: portProvisioning5600
+name: portPartlyOccupied
 template: PortProvisioning
 values:
   endSz: "49/30/179/76H1"
   slotNumber: "3"
-  portNumber: "4"
+  portNumber: "3"
   homeIdPool: 32
   lineIdPool: 32
   accessLinesWG: 16
   defaultNEProfilesActive: 16
   defaultNetworkLineProfilesActive: 16
-  emptyPort: 0
+  accessLinesCount: 8
