--- a/osr-data/templates/portProvisioningTemplate.yml
+++ b/osr-data/templates/portProvisioningTemplate.yml
@@ -16,5 +16,5 @@ model:
     type: Integer
   defaultNetworkLineProfilesActive:
     type: Integer
-  emptyPort:
+  accessLinesCount:
     type: Integer
