--- a/osr-data/data/provisioning/portEmpty5800.yml
+++ b/osr-data/data/provisioning/portEmpty5800.yml
@@ -1,4 +1,4 @@
-name: portProvisioning5800
+name: portEmpty5800
 template: PortProvisioning
 values:
   endSz: "49/911/1100/76H2"
@@ -9,4 +9,4 @@ values:
   accessLinesWG: 32
   defaultNEProfilesActive: 32
   defaultNetworkLineProfilesActive: 32
-  emptyPort: 0
+  accessLinesCount: 0
