DIGIHUB-36492 - OLT MA5600 test cases

--- a/osr-data/dataset/Dataset_1.yml
+++ b/osr-data/dataset/Dataset_1.yml
@@ -12,4 +12,8 @@ data:
     name: portEmpty5800
   - template: PortProvisioning
     name: portPartlyOccupied
+  - template: PortProvisioning
+    name: portWithInActiveLines
+  - template: PortProvisioning
+    name: portFullyOccupied
 artifacts:
