--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,8 @@
             </plugin>
         </plugins>
     </build>
-
+    <properties>
+        <oc.project.name>gigabit-tm-upiter-01</oc.project.name>
+        <oc.domain.name>telitcaas3.t-internal.com</oc.domain.name>
+    </properties>
 </project>
