--- a/osr-data/data/commissioning/MA5600.yml
+++ b/osr-data/data/commissioning/MA5600.yml
@@ -2,19 +2,19 @@ name: MA5600
 template: OltCommissioning
 values:
   oltSearchType: "EndSz"
-  akz: ""
-  onkz: ""
-  vkz: ""
-  fsz: ""
-  oltEndSz: ""
-  oltKlsId: ""
-  oltSlotNumber: ""
-  oltPortNumber: ""
-  bngEndSz: ""
-  bngEquipmentHolder: ""
-  bngDownlinkCardPort: ""
-  lsz: ""
-  orderNumber: ""
+  akz: "49"
+  onkz: "8571"
+  vkz: "0"
+  fsz: "76H1"
+  oltEndSz: "49/8571/0/76H1"
+  oltKlsId: "12377912"
+  oltSlotNumber: "19"
+  oltPortNumber: "0"
+  bngEndSz: "49/30/179/43G1"
+  bngEquipmentHolder: "1"
+  bngDownlinkCardPort: "ge-1/2/3"
+  lsz: "4C1"
+  orderNumber: "10"
 
 
 
