DIGIHUB-43359 - models fixed, created UI part of test

--- a/osr-data/data/commissioning/MA5600.yml
+++ b/osr-data/data/commissioning/MA5600.yml
@@ -5,7 +5,7 @@ values:
   onkz: "8571"
   vkz: "0"
   fsz: "76H1"
-  oltEndSz: "49/8571/0/76H1"
+  oltEndSz: "49/8571/0/76HA"
   oltKlsId: "12377912"
   oltSlotNumber: "19"
   oltPortNumber: "0"
