DIGIHUB-43359-1 - domain autotest OltCommissioning5600

--- a/osr-data/data/commissioning/MA5600.yml
+++ b/osr-data/data/commissioning/MA5600.yml
@@ -4,7 +4,7 @@ values:
   akz: "49"
   onkz: "8571"
   vkz: "0"
-  fsz: "76H1"
+  fsz: "76HA"
   oltEndSz: "49/8571/0/76HA"
   oltKlsId: "12377912"
   oltSlotNumber: "19"
