DIGIHUB-37121 - Models created, Auto commissioning test fixed for new UI markers, Manual commissioning test created

--- a/osr-data/dataset/Dataset_1.yml
+++ b/osr-data/dataset/Dataset_1.yml
@@ -14,6 +14,12 @@ data:
     name: portWithInActiveLines
   - template: PortProvisioning
     name: portFullyOccupied
-  - template: OltCommissioning
-    name: MA5600
+  - template: OltDevice
+    name: FSZ_76HA
+  - template: OltDevice
+    name: FSZ_76H1
+  - template: OltCommissioningResult
+    name: manualCommissioningResults
+  - template: OltCommissioningResult
+    name: autoCommissioningResults
 artifacts:
