--- a/osr-data/data/credentials/rhssoCredentialsForAccessLinesSearch.yml
+++ b/osr-data/data/credentials/rhssoCredentialsForAccessLinesSearch.yml
@@ -2,4 +2,4 @@ name: RHSSOAccessManagementSupportUi
 template: Credentials
 values:
   login: "andrei_k"
-  password: "andreik"
+  password: "Andrei_k1"
