--- a/osr-data/data/commissioning/FSZ_76ZB_MA5800.yml
+++ b/osr-data/data/commissioning/FSZ_76ZB_MA5800.yml
@@ -1,15 +1,15 @@
-name: FSZ_76H1_MA5600
+name: FSZ_76ZB_MA5800
 template: OltDevice
 values:
-  vpsz: "49/30/2000"
-  fsz: "76H1"
-  bngEndsz: "49/911/84/7ZJA"
-  bngDownlinkPort: "ge-1/2/3"
-  bngDownlinkSlot: "0"
-  lsz: "4C1"
-  orderNumber: "1234567890"
-  oltPort: "0"
-  oltSlot: "19"
+  vpsz: "49/911/1100"
+  fsz: "76ZB"
+  bngEndsz: "49/911/84/7ZJB"
+  bngDownlinkPort: "ge-1/2/4"
+  bngDownlinkSlot: "1"
+  lsz: "4Z2"
+  orderNumber: "223344"
+  oltPort: "3"
+  oltSlot: "8"
   vst: "DefaultVst"
 
 
