--- a/osr-data/data/commissioning/nvtForOltAutoCommissioningMA5600.yml
+++ b/osr-data/data/commissioning/nvtForOltAutoCommissioningMA5600.yml
@@ -1,4 +1,4 @@
-name: nvtForOltCommissioning
+name: nvtForOltAutoCommissioningMA5600
 template: Nvt
 values:
   id: ""
@@ -6,6 +6,6 @@ values:
   address: "AddressBigCity"
   splitterType: 32
   gebietstyp: ""
-  oltDevice: "FSZ_76HA"
+  oltDevice: "FSZ_76H1_MA5600"
   oltSlot: "19"
   oltPort: "0"
