DIGIHUB-47437: Integration and domain test for A4 preprovisioning

--- a/osr-data/values.yml
+++ b/osr-data/values.yml
@@ -13,3 +13,7 @@ global:
     onkz: "8571"
     asb: "1"
     klsId: "12377912"
+a4Provisioning:
+  endSz: "49/8492/0/76A4"
+  slotNumber: "2"
+  portNumber: "5"
