DIGIHUB-0 deactivate failing domain test for later analysis

--- a/osr-data/values.yml
+++ b/osr-data/values.yml
@@ -14,6 +14,6 @@ global:
     asb: "1"
     klsId: "12377912"
 a4Provisioning:
-  endSz: "49/8492/0/12B3"
-  slotNumber: "99"
-  portNumber: "1234"
+  endSz: "49/8492/0/76A4"
+  slotNumber: "2"
+  portNumber: "5"
