--- a/osr-data/data/batch/homeIdBatch.yml
+++ b/osr-data/data/batch/homeIdBatch.yml
@@ -1,4 +1,4 @@
 name: homeIdBatch
-template: HomeIdBatch
+template: com.tsystems.tm.acc.ta.data.osr.models.HomeIdBatch
 values:
   numberLineIds: 32
