--- a/osr-data/data/commissioning/FSZ_76H1_MA5600.yml
+++ b/osr-data/data/commissioning/FSZ_76H1_MA5600.yml
@@ -1,5 +1,5 @@
 name: FSZ_76H1_MA5600
-template: OltDevice
+template: com.tsystems.tm.acc.data.models.OltDevice
 values:
   vpsz: "49/30/2000"
   fsz: "76H1"
@@ -8,10 +8,6 @@ values:
   bngDownlinkSlot: "0"
   lsz: "4C1"
   orderNumber: "1234567890"
+  vst: "@DefaultVst"
   oltPort: "0"
   oltSlot: "19"
-  vst: "DefaultVst"
-
-
-
-
