--- a/osr-data/data/credentials/rhssoCredentialsGFNW.yml
+++ b/osr-data/data/credentials/rhssoCredentialsGFNW.yml
@@ -1,5 +1,5 @@
 name: RHSSOOltResourceInventoryUiGFNW
-template: Credentials
+template: com.tsystems.tm.acc.data.models.Credentials
 values:
   login: "mercuryrwgfnw"
   password: "Freddierw2+"
