--- a/osr-data/data/batch/lineIdBatch.yml
+++ b/osr-data/data/batch/lineIdBatch.yml
@@ -1,5 +1,5 @@
 name: lineIdBatch
-template: LineIdBatch
+template: com.tsystems.tm.acc.ta.data.osr.models.LineIdBatch
 values:
   endSz: "49/911/1100/76H1"
   topasEndSz: "49/8571/0/76Z7"
