--- a/osr-data/data/commissioning/FSZ_76HA.yml
+++ b/osr-data/data/commissioning/FSZ_76HA.yml
@@ -1,5 +1,5 @@
 name: FSZ_76HA
-template: OltDevice
+template: com.tsystems.tm.acc.data.models.OltDevice
 values:
   vpsz: "49/8571/0"
   fsz: "76HA"
@@ -8,10 +8,6 @@ values:
   bngDownlinkSlot: "0"
   lsz: "4C1"
   orderNumber: "10"
+  vst: "@DefaultVst"
   oltPort: "0"
   oltSlot: "19"
-  vst: "DefaultVst"
-
-
-
-
