--- a/osr-data/data/commissioning/addressBigCity.yml
+++ b/osr-data/data/commissioning/addressBigCity.yml
@@ -1,5 +1,5 @@
 name: AddressBigCity
-template: Address
+template: com.tsystems.tm.acc.data.models.Address
 values:
   city: "${scope, global.addressBigCity.city}"
   district: "${scope, global.addressBigCity.district}"
