--- a/osr-data/data/commissioning/nvtForOltAutoCommissioningMA5600.yml
+++ b/osr-data/data/commissioning/nvtForOltAutoCommissioningMA5600.yml
@@ -1,11 +1,11 @@
 name: nvtForOltAutoCommissioningMA5600
-template: Nvt
+template: com.tsystems.tm.acc.data.models.Nvt
 values:
   id: ""
   name: ""
-  address: "AddressBigCity"
+  address: "@AddressBigCity"
   splitterType: 32
   gebietstyp: ""
-  oltDevice: "FSZ_76H1_MA5600"
+  oltDevice: "@FSZ_76H1_MA5600"
   oltSlot: "19"
   oltPort: "0"
