--- a/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
+++ b/osr-data/data/credentials/rhssoCredentialsBerlinium.yml
@@ -1,5 +1,5 @@
 name: RHSSOA4InventoryUi
-template: com.tsystems.tm.acc.data.models.Credentials
+template: Credentials
 values:
   login: "autotest.berlinium"
   password: "autotest.Berlinium+1"
