DIGIHUB-56547 completely refactored A4 DTO test data handling

--- a/osr-data/data/a4resourceinventory/networkelementgroups/defaultNetworkElementGroup.yml
+++ b/osr-data/data/a4resourceinventory/networkelementgroups/defaultNetworkElementGroup.yml
@@ -1,7 +1,7 @@
 name: defaultNetworkElementGroup
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementGroup
 values:
-  uuid: "(is returned when new NEG is created)"
-  name: "some unique NEG name" # Name must be unique
+  uuid: "" # field will be filled with returned uuid of created NEG
+  name: "" # if blank a random name will be generated and field will be filled with that value
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
