--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
@@ -2,5 +2,5 @@ name: defaultNetworkElementPort
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
-  port: "" # if blank: random value will be generated and field will be filled with that value
+  port: "${scope, global.a4Provisioning.portNumber}" # if blank: random value will be generated and field will be filled with that value
   operationalState: "WORKING"
