--- a/osr-data/values.yml
+++ b/osr-data/values.yml
@@ -13,7 +13,8 @@ global:
     onkz: "8571"
     asb: "1"
     klsId: "12377912"
-a4Provisioning:
-  endSz: "49/8492/0/76A4"
-  slotNumber: "2"
-  portNumber: "5"
+  a4Provisioning:
+    vpsz: "49/8492/0"
+    fsz: "${randomLong, 1000, 9999}"
+    slotNumber: "99"
+    portNumber: "${randomLong, 1000, 9999}"
