--- a/osr-data/data/dpucommissioning/DpuCommissioningPositive.yml
+++ b/osr-data/data/dpucommissioning/DpuCommissioningPositive.yml
@@ -2,3 +2,4 @@ name: DpuCommissioningPositive
 template: com.tsystems.tm.acc.ta.data.osr.models.Dpu
 values:
   endSz: "49/8571/0/71GA"
+  onuId: 12345678
