--- a/osr-data/values.yml
+++ b/osr-data/values.yml
@@ -18,3 +18,6 @@ global:
     fsz: "${randomLong, 1000, 9999}"
     slotNumber: "99"
     portNumber: "${randomLong, 1000, 9999}"
+  a4CsvImport:
+    negName: "Imported NEG-${randomLong, 1000, 9999}"
+    vpsz: "49/8492/0"
