--- a/osr-data/data/commissioning/FSZ_76HA.yml
+++ b/osr-data/data/commissioning/FSZ_76HA.yml
@@ -1,5 +1,5 @@
 name: FSZ_76HA
-template: com.tsystems.tm.acc.data.models.OltDevice
+template: com.tsystems.tm.acc.data.models.stable.OltDevice
 values:
   vpsz: "49/8571/0"
   fsz: "76HA"
