--- a/osr-data/data/credentials/rhssoCredentials.yml
+++ b/osr-data/data/credentials/rhssoCredentials.yml
@@ -1,5 +1,5 @@
 name: RHSSOOltResourceInventoryUi
-template: com.tsystems.tm.acc.data.models.Credentials
+template: com.tsystems.tm.acc.data.models.stable.Credentials
 values:
   login: "mercuryrw"
   password: "Freddierw3+"
