--- a/osr-data/data/credentials/rhssoCredentialsForAccessLinesSearch.yml
+++ b/osr-data/data/credentials/rhssoCredentialsForAccessLinesSearch.yml
@@ -1,5 +1,5 @@
 name: RHSSOAccessManagementSupportUi
-template: com.tsystems.tm.acc.data.models.Credentials
+template: com.tsystems.tm.acc.data.models.stable.Credentials
 values:
   login: "andrei_k"
   password: "Andrei_k3"
