--- a/osr-data/data/dpucommissioning/DpuCommissioningPostConfigureANCPCallbackError.yml
+++ b/osr-data/data/dpucommissioning/DpuCommissioningPostConfigureANCPCallbackError.yml
@@ -1,6 +1,6 @@
-name: DpuCommissioningPostDeprovisionCallbackError
+name: DpuCommissioningPostConfigureANCPCallbackError
 template: com.tsystems.tm.acc.ta.data.osr.models.Dpu
 values:
-  endSz: "49/8571/0/71GI"
+  endSz: "49/8571/0/71GJ"
   onuId: 12345678
-  stepToFall: "Activity_DeprovisionOltPort"
+  stepToFall: "Activity_Ancp-Conf.POST.AncpConf"
