DIGIHUB-65537 Fix some test cases

--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort_logicalLabel_10G_001.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort_logicalLabel_10G_001.yml
@@ -4,4 +4,4 @@ values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
   port: "${scope, global.a4Provisioning.portNumber}" # if blank: random value will be generated and field will be filled with that value
   operationalState: "WORKING"
-  logicalLabel: '10G_001'
+  logicalLabel: "10G_001"
