--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
@@ -4,3 +4,4 @@ values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
   port: "${scope, global.a4Provisioning.portNumber}" # if blank: random value will be generated and field will be filled with that value
   operationalState: "WORKING"
+  logicalLabel: "logicalLabel_${scope, global.a4Provisioning.portNumber}"
