--- a/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
@@ -3,7 +3,7 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElement
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NE
   vpsz: "${scope, global.a4Provisioning.vpsz}" # VPSZ in combination with FSZ must be unique
-  fsz: "${scope, global.a4Provisioning.fsz}" # if blank: random FSZ will be generated and field will be filled with that value
+  fsz: "${scope, global.a4Provisioning.fsz}"
   klsId: "1234567"
   category: "OLT"
   operationalState: "WORKING"
