DIGIHUB-67368 change type of NE and other test data to enable NEL creation

--- a/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
@@ -8,4 +8,4 @@ values:
   category: "OLT"
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
-  type: "SPINE_SWITCH"
+  type: "A4_SPINE-Switch_v1"
