--- a/osr-data/data/a4resourceinventory/networkelements/networkElementB.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/networkElementB.yml
@@ -8,4 +8,4 @@ values:
   category: "OLT"
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
-  type: "SPINE_SWITCH"
+  type: "A4_OLT_v1"
