DIGIHUB-67368 adjust test

--- a/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
@@ -9,3 +9,4 @@ values:
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
   type: "A4_SPINE-Switch_v1"
+  plannedMatNr: "" # if blank will be overwritten by PSL
