--- a/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
+++ b/osr-data/data/a4resourceinventory/networkelements/defaultNetworkElement.yml
@@ -9,4 +9,4 @@ values:
   operationalState: "WORKING"
   lifecycleState: "OPERATING"
   type: "A4_SPINE-Switch_v1"
-  plannedMatNr: "" # if blank will be overwritten by PSL
+  plannedMatNr: "123456" # if psl called will be overwritten
