--- a/osr-data/data/credentials/rhssoCredentialsDTAG.yml
+++ b/osr-data/data/credentials/rhssoCredentialsDTAG.yml
@@ -1,5 +1,5 @@
 name: RHSSOOltResourceInventoryUiDTAG
-template: com.tsystems.tm.acc.data.models.stable.Credentials
+template: com.tsystems.tm.acc.ta.data.osr.models.Credentials
 values:
   login: "mercuryrw"
   password: "Freddierw2+"
