--- a/osr-data/data/deprovisioning/deviceDeprovisioning.yml
+++ b/osr-data/data/deprovisioning/deviceDeprovisioning.yml
@@ -1,5 +1,5 @@
 name: deviceDepovisioning
-template: com.tsystems.tm.acc.data.models.stable.PortProvisioning
+template: com.tsystems.tm.acc.ta.data.osr.models.PortProvisioning
 values:
   endSz: "49/30/179/76H1"
   accessLinesWG: 0
