--- a/osr-data/data/dpucommissioning/DefaultOlt.yml
+++ b/osr-data/data/dpucommissioning/DefaultOlt.yml
@@ -1,5 +1,5 @@
 name: DpuCommissioningOlt
-template: com.tsystems.tm.acc.data.models.stable.OltDevice
+template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
 values:
   vpsz: "49/30/1234"
   fsz: "76H1"
