DIGIHUB-69147 move the fixed test data to model classes / remove nvt models from teamlevel test

--- a/osr-data/data/commissioning/EndSz_49_30_2000_76H1_MA5600.yml
+++ b/osr-data/data/commissioning/EndSz_49_30_2000_76H1_MA5600.yml
@@ -1,4 +1,4 @@
-name: FSZ_76H1_MA5600
+name: EndSz_49_30_2000_76H1_MA5600
 template: com.tsystems.tm.acc.ta.data.osr.models.OltDevice
 values:
   vpsz: "49/30/2000"
