--- a/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/defaultNetworkServiceProfileFtthAccess.yml
+++ b/osr-data/data/a4resourceinventory/networkserviceprofileftthaccess/defaultNetworkServiceProfileFtthAccess.yml
@@ -2,3 +2,5 @@ name: defaultNetworkServiceProfileFtthAccess
 template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkServiceProfileFtthAccess
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NSP
+  ontSerialNumber: "" # if blank: field will be filled with returned uuid of created NSP
+  lineId: "" # if blank: field will be filled with returned uuid of created NSP
