--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
@@ -3,4 +3,7 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
   operationalState: "WORKING"
-  logicalLabel: "LogicalLabel_${scope, global.a4Provisioning.portNumber}"
+  functionalPortLabel: "LogicalLabel_${scope, global.a4Provisioning.portNumber}"
+  networkElementEndsz: "" # if blank: field will be filled
+  networkElementUuid: "" # if blank: field will be filled
+  type: "" # if blank: field will be filled
