--- a/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_10G_001.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_10G_001.yml
@@ -3,4 +3,7 @@ template: com.tsystems.tm.acc.ta.data.osr.models.A4NetworkElementPort
 values:
   uuid: "" # if blank: field will be filled with returned uuid of created NEP
   operationalState: "WORKING"
-  logicalLabel: "10G_001"
+  functionalPortLabel: "10G_001"
+  networkElementEndsz: "" # if blank: field will be filled
+  networkElementUuid: "" # if blank: field will be filled
+  type: "10G_ETHERNET_PORT"
