DIGIHUB-73659 NEP tests with portNumber

--- a/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_10G_001.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/networkElementPort_logicalLabel_10G_001.yml
@@ -7,3 +7,4 @@ values:
   networkElementEndsz: "" # if blank: field will be filled
   networkElementUuid: "" # if blank: field will be filled
   type: "10G_ETHERNET_PORT"
+  portNumber: "1"
