--- a/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
+++ b/osr-data/data/a4resourceinventory/networkelementports/defaultNetworkElementPort.yml
@@ -7,3 +7,4 @@ values:
   networkElementEndsz: "" # if blank: field will be filled
   networkElementUuid: "" # if blank: field will be filled
   type: "" # if blank: field will be filled
+  portNumber: "" # if blank: field will be filled
